# EchoTrade-AI

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  ROADMAP.md  claude.md  cli_test.py  plan.md  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
app/: config.py  main.py  prices.py
app/edgar/: cache.py  client.py  investors.py  parser.py
app/insiders/: ingestion_service.py  models.py  scorer.py
app/portfolio/: diff.py  models.py
app/sentiment/: analyzer.py
app/signals/: analyst.py
docs/: architecture.md
docs/adr/: 0001-llm-routing-via-ollama.md  0002-sqlite-now-postgres-deferred.md  0003-sec-edgar-html-index-parsing.md  0004-local-only-deployment.md  0005-13f-snapshot-cache.md  0006-deployment-vercel-railway.md  0006-deployment-vercel-render.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: InvestorSidebar.tsx  TopBar.tsx
frontend/src/components/panels/: ClonePanel.tsx  DiffPanel.tsx  InsiderPanel.tsx  SignalsPanel.tsx  SnapshotPanel.tsx
frontend/src/hooks/: useApi.ts
tests/: test_filing_cache.py  test_parse_response.py  test_prices.py
