[project]
name = "echotrade-ai"
version = "0.1.0"
description = "AI-powered celebrity portfolio cloning engine using 13F filings and sentiment"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.0",
    "openai>=1.51.0",
    "yfinance>=0.2.44",
    "textblob>=0.18.0",
    "feedparser>=6.0.11",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.2"]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"
